Added Highlight JS and fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
      <div class="row">
           <div class="container">
                <div class="col-md-4">
-                    <h3>View the Docs</h3>
+                    <h3><a href="docs.html">View the Docs</a></h3>
                     <p>Get the detailed outline of the styles used for the Options Counseling website</p>
                </div>
                
                <div class="col-md-4">
                     <h3>Library Used</h3>
-                    <p>Boorstrap v3.3.7 was used to create this site. There are also custom CSS styles applied to areas of the site.</p>
+                    <p>Bootstrap v3.3.7 was used to create this site along with several custom CSS styles applied to different areas of the site.</p>
                </div>
                
                <div class="col-md-4">
                     <h3>View the Site</h3>
-                    <p><a href="http://partnership.vcu.edu/optionscounseling" target="_blank">View the live site.</a></p>
+                    <p><strong><a href="http://partnership.vcu.edu/optionscounseling" target="_blank">View the live site.</a></strong></p>
                </div>
           </div>
      </div>
